# Elysium

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  ignore-drafts.sh
.github/Agents/: yamamoto.agent.md
.github/agents/: felix.agent.md  markus.agent.md  yamamoto.agent.md
.github/workflows/: coverage.yml  opencode.yml  release.yml  test.yml
Formula/: ely.rb
cli/: go.mod  go.sum  main.go
cli/cmd/: check_updates.go  check_updates_cmd_test.go  (+44 more)
docs/: ARCHITECTURE.md  EMBLEM_SPEC.md  GETTING_STARTED.md  SECURITY.md  SERVER_SETUP.md  TROUBLESHOOTING.md
schemas/: emblem.schema.json
scripts/: build-all.sh  coverage.sh  create-release.sh  generate-changelog.sh  install.sh  release.sh  test.sh  uninstall.sh  update-homebrew.sh
server/: .env.example  .env.production.example  .gitignore  ENV_REFERENCE.md  README.md  VERCEL_DEPLOYMENT.md  coverage.xml  pyproject.toml  requirements.txt
server/api/: index.py
server/app/: config.py  database.py  limiter.py  main.py  models.py
server/app/routes/: __init__.py  auth.py  emblems.py  keys.py
server/app/services/: __init__.py  auth_service.py  emblem_service.py  key_service.py
server/migrations/: 001_profiles_and_search.sql  002_device_codes.sql  003_verified_accounts.sql
server/supabase/: README.md  SETUP.md
server/supabase/migrations/: 20240303_initial_schema.sql  20240306_fix_anon_permissions.sql
server/tests/: conftest.py  test_auth.py  test_emblems.py  test_keys.py  test_models.py  test_security.py  test_services.py
tests/: e2e-test.sh
(+56 files in other folders)
